--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="header-clouds"></div>
   <div class="header-fence"></div>
   <div class="header-tree"></div>
-
+ 
   <span class="header-soon">Скоро</span>
   <h1 class="header-title">Code&thinsp;and&thinsp;Magick</h1>
   <p class="header-description">
@@ -21,6 +21,7 @@
   </p>
 
   <div class="demo"></div>
+<!-- <canvas id='draw_2' style='border:4px solid' width='550' height='300'></canvas>-->
 </header>
 
 <main>
@@ -119,7 +120,9 @@
   </article>
 </template>
 
+    
 <script src="js/form.js"></script>
+<!--<script src="js/game.js"></script>-->
 <script src="js/check.js"></script>
 <script src="js/game-stat.min.js"></script>
 </body>
